2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't
	  completely fail the loading of the solution data if one of
	  the projects fails.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Bump db version because serialized headers are referencing
	  the old MD.Projects assembly.

	* MonoDevelop.Projects.Dom/DomType.cs: Added null check.

2010-03-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/FileEntry.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/ProjectMemoryProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/SimpleCodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Fixed 'Bug 553554 - MD takes a while to quit'.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	Merged MD.Projects into MD.Core, and MD.Projects.Gui,
	MD.Core.Gui and MD.Components into MD.Ide.

2010-03-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/Runtime.cs:
	* MonoDevelop.Core.Instrumentation/Counter.cs:
	* MonoDevelop.Core.Instrumentation/CounterCategory.cs:
	* MonoDevelop.Core.Instrumentation/InstrumentationService.cs:
	  Allow remote access to counter data.

2010-03-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Instrumentation/TimeCounter.cs: Add missing
	  null check.

2010-03-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/PropertyBag.cs: Add missing null check.

2010-03-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/StringParserService.cs: Added new
	  CustomTagStore type, which can be used to put together
	  several related tags for string parsing.
