@@ -1,3 +1,14 @@
+2010-03-18  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Core.Instrumentation/TimeCounter.cs: This
+	  doesn't need to be public.
+
+	* MonoDevelop.Core.Instrumentation/Counter.cs: Use better name
+	  for the duration property.
+
+	* MonoDevelop.Core.Instrumentation/TimerCounter.cs: Added some
+	  statistics.
+
 2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't
